--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/codegen.test.ts"],
   "compilerOptions": {
     "incremental": true,
     "noFallthroughCasesInSwitch": true,
