add float, constructors without fields

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ohm",
-  "version": "1.0.0",
+  "name": "niva",
+  "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
