--- a/Niva/infroProject/module.yaml
+++ b/Niva/infroProject/module.yaml
@@ -4,3 +4,15 @@ product: jvm/app
 dependencies:
   - org.jetbrains.kotlinx:kotlinx-datetime:0.4.1
 
+test-dependencies:
+  - org.jetbrains.kotlin:kotlin-test:1.9.20
+
+settings:
+  kotlin:
+    languageVersion: 2.0
+    serialization:
+      format: json
+  jvm:
+    target: 21
+  java:
+    source: 21
