--- a/Niva/infroProject/module.yaml
+++ b/Niva/infroProject/module.yaml
@@ -2,17 +2,17 @@
 product: jvm/app
 
 dependencies:
-  - org.jetbrains.kotlinx:kotlinx-datetime:0.4.1
+
 
 test-dependencies:
-  - org.jetbrains.kotlin:kotlin-test:1.9.20
+  - org.jetbrains.kotlin:kotlin-test:2.0.21
 
 settings:
   kotlin:
-    languageVersion: 2.0
     serialization:
       format: json
+
   jvm:
-    target: 21
-  java:
-    source: 21
+    release: 21
+
+
