--- a/Niva/Niva/gradle.properties
+++ b/Niva/Niva/gradle.properties
@@ -1,2 +1,2 @@
-org.gradle.configuration-cache=true
-org.gradle.java.installations.auto-download=true
+#org.gradle.configuration-cache=true
+#org.gradle.java.installations.auto-download=true
